--- a/LibEncrypt/build.gradle
+++ b/LibEncrypt/build.gradle
@@ -27,12 +27,12 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-thread'//项目名称
+    artifactId = 'lib-encrypt'//项目名称
     repoName=rootProject.repoName
     publishVersion = '1.0.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the base thread manager for zixie'//项目描述
+    desc = 'the base encrypt for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
