--- a/LibGson/src/main/AndroidManifest.xml
+++ b/LibGson/src/main/AndroidManifest.xml
@@ -1,4 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="com.bihe0832.android.lib.gson">
+<manifest package="com.bihe0832.android.lib.gson">
 </manifest>
