--- a/LibFile/build.gradle
+++ b/LibFile/build.gradle
@@ -25,23 +25,23 @@ android {
     }
 }
 
-uploadArchives {
-    //本地仓库的一种
-    repositories.mavenDeployer {
-        repository(url: "file://" + rootDir.toString() + "/../../mnaapp/mna-application/libs/")
-        pom.project {
-            groupId project.groupId
-            artifactId "lib-file"
-            version "1.0.1"
-        }
-    }
-}
+//uploadArchives {
+//    //本地仓库的一种
+//    repositories.mavenDeployer {
+//        repository(url: "file://" + rootDir.toString() + "/../../mnaapp/mna-application/libs/")
+//        pom.project {
+//            groupId project.groupId
+//            artifactId "lib-file"
+//            version "1.0.2"
+//        }
+//    }
+//}
 
 //添加发布相关的配置
 publish {
     artifactId = 'lib-file'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.0.1'//版本号
+    publishVersion = '1.0.2'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
