--- a/LibFile/src/main/AndroidManifest.xml
+++ b/LibFile/src/main/AndroidManifest.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bihe0832.android.lib.file">
-
+<manifest package="com.bihe0832.android.lib.file"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+    <application>
+        <provider
+            android:name="com.bihe0832.android.lib.file.ZixieFileProvider"
+            android:authorities="${applicationId}.bihe0832"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/zixie_file_paths"/>
+        </provider>
+    </application>
 </manifest>
