--- a/LibDownloadAndInstall/build.gradle
+++ b/LibDownloadAndInstall/build.gradle
@@ -41,7 +41,7 @@ uploadArchives {
 publish {
     artifactId = 'lib-download-install'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.1.3'//版本号
+    publishVersion = '1.1.4'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -51,6 +51,7 @@ publish {
 
 dependencies {
     api "com.bihe0832.android:lib-encrypt:1.+"
+//    api project(":LibFile")
     api "com.bihe0832.android:lib-file:1.+"
     api "com.bihe0832.android:lib-thread:1.+"
     api "com.android.support:appcompat-v7:${project.android_support_version}"
