--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-//include ':APPTest'
+include ':APPTest'
 //include ':LibDownloadAndInstall'
 //include ':LibEncrypt'
-include ':LibFile'
+//include ':LibFile'
 //include ':LibGson'
 //include ':LibThread'
 //include ':LibUtils'
