--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -46,6 +46,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
-    api project(":LibDownloadAndInstall")
+//    api project(":LibDownloadAndInstall")
+    api "com.bihe0832.android:lib-download-install:1.1.4"
 
 }
