--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-include ':APPTest'
-//include ':LibDownloadAndInstall'
+//include ':APPTest'
+include ':LibTTS'
 //include ':LibEncrypt'
 //include ':LibFile'
 //include ':LibGson'
 //include ':LibThread'
-//include ':LibUtils'
+////include ':LibUtils'
