--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     repositories {
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
+        maven { url "https://dl.bintray.com/bihe0832/android" }
+
     }
 
     dependencies {
@@ -19,6 +21,7 @@ allprojects {
     repositories {
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
+        maven { url "https://dl.bintray.com/bihe0832/android" }
     }
 }
 
