--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -46,7 +46,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
-//    api project(":LibTTS")
+    api project(":LibTimer")
     api "com.bihe0832.android:lib-tts:1.0.2"
     api "com.bihe0832.android:lib-download-install:1.1.5"
 
