--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
-include ':APPTest'
+//include ':APPTest'
 //include ':LibTTS'
+include ':LibTimer'
+
 //include ':LibEncrypt'
 //include ':LibFile'
 //include ':LibGson'
