--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-include ':APPTest'
+//include ':APPTest'
 include ':LibTTS'
-include ':LibTimer'
+//include ':LibTimer'
 
 //include ':LibEncrypt'
 //include ':LibFile'
