--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ apply from: 'config.gradle'
 
 buildscript {
     repositories {
+        maven { url "https://mirrors.tencent.com/repository/maven/mna" }
+
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
         maven { url "https://dl.bintray.com/bihe0832/android" }
@@ -19,6 +21,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://mirrors.tencent.com/repository/maven/mna" }
+
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
         maven { url "https://dl.bintray.com/bihe0832/android" }
