--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
-include ':APPTest'
-include ':LibTTS'
+//include ':APPTest'
+//include ':LibTTS'
 //include ':LibTimer'
 //include ':LibEncrypt'
 include ':LibConfig'
