--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,15 @@
 //include ':APPTest'
-//include ':LibTTS'
-//include ':LibTimer'
-//include ':LibEncrypt'
-include ':LibConfig'
-//include ':LibFile'
-//include ':LibGson'
+////include ':LibTTS'
+////include ':LibTimer'
+////include ':LibEncrypt'
+////include ':LibConfig'
+////include ':LibFile'
+////include ':LibGson'
 //include ':LibThread'
-////include ':LibUtils'
+//include ':LibUtils'
+//
+//
+//include ':Router'
+//include ':RouterAnnotation'
+//include ':RouterCompiler'
+include ':LibChannel'
