--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,14 @@
 //include ':APPTest'
-////include ':LibTTS'
-////include ':LibTimer'
-////include ':LibEncrypt'
-////include ':LibConfig'
-////include ':LibFile'
-////include ':LibGson'
-//include ':LibThread'
-//include ':LibUtils'
-//
-//
-//include ':Router'
-//include ':RouterAnnotation'
-//include ':RouterCompiler'
-include ':LibChannel'
+//////include ':LibTTS'
+//////include ':LibTimer'
+//////include ':LibEncrypt'
+//////include ':LibConfig'
+//////include ':LibFile'
+//////include ':LibGson'
+////include ':LibThread'
+include ':LibUtils'
+//include ':LibCommonUtils'
+////include ':Router'
+////include ':RouterAnnotation'
+////include ':RouterCompiler'
+//include ':LibAPK'
