版本及依赖梳理

--- a/LibAPK/build.gradle
+++ b/LibAPK/build.gradle
@@ -25,14 +25,31 @@ android {
     }
 }
 
+//uploadArchives {
+//    //本地仓库的一种
+//    repositories.mavenDeployer {
+//        repository(url: "file://" + rootDir.toString() + "/../../mnaapp/mna-application/libs/")
+//        pom.project {
+//            groupId project.groupId
+//            artifactId "lib-file"
+//            version "1.0.2"
+//        }
+//    }
+//}
+
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-channel'//项目名称
-    repoName=rootProject.repoName
+    artifactId = 'lib-utils-apk'//项目名称
+    repoName = rootProject.repoName
     publishVersion = '1.2.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the channel read for zixie'//项目描述
+    desc = 'the apk utils for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
+}
+
+dependencies {
+    api "com.bihe0832.android:lib-toast:1.2.0"
+    api "com.android.support:appcompat-v7:${project.android_support_version}"
 }
