--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,20 @@
-//include ':APPTest'
-//////include ':LibTTS'
-//////include ':LibTimer'
-//////include ':LibEncrypt'
-//////include ':LibConfig'
-//////include ':LibFile'
-//////include ':LibGson'
-////include ':LibThread'
-include ':LibUtils'
+//include 'RouterAnnotation'
+//include 'Router'
+//include 'RouterCompiler'
 //include ':LibCommonUtils'
-////include ':Router'
-////include ':RouterAnnotation'
-////include ':RouterCompiler'
-//include ':LibAPK'
+//include 'LibThread'
+//include 'LibEncrypt'
+//include 'LibGson'
+//include 'LibChannel'
+//include 'LibTimer'
+//include 'LibConfig'
+//include 'LibFile'
+//include 'LibDownloadAndInstall'
+//include 'LibToast'
+//include 'LibAPK'
+//include 'LibTTS'
+
+//include 'LibUIUtils'
+//include 'LibUtils'
+include ':APPTest'
+
