--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -46,9 +46,8 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
-//    api project(":LibTTS")
-    api "com.bihe0832.android:lib-tts:1.0.10"
-    api "com.bihe0832.android:lib-timer:1.0.2"
-    api "com.bihe0832.android:lib-download-install:1.1.5"
-
+//    api project(':LibUtils')
+//    api project(':LibUIUtils')
+    api "com.bihe0832.android:lib-utils:1.2.0"
+    api "com.bihe0832.android:lib-uiutils:1.2.0"
 }
