--- a/LibTTS/build.gradle
+++ b/LibTTS/build.gradle
@@ -41,7 +41,7 @@ android {
 publish {
     artifactId = 'lib-tts'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.0.10'//版本号
+    publishVersion = '1.2.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -50,7 +50,7 @@ publish {
 }
 
 dependencies {
-    api "com.bihe0832.android:lib-utils:1.0.0"
-    api "com.bihe0832.android:lib-config:1.0.1"
+    api "com.bihe0832.android:lib-utils-common:1.2.0"
+    api "com.bihe0832.android:lib-config:1.2.0"
 //    api project(":LibConfig")
 }
