--- a/LibTimer/build.gradle
+++ b/LibTimer/build.gradle
@@ -41,14 +41,14 @@ android {
 publish {
     artifactId = 'lib-timer'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.0.3'//版本号
+    publishVersion = '1.2.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the base file utils for zixie'//项目描述
+    desc = 'the timer task utils for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
 
 dependencies {
-    api "com.bihe0832.android:lib-thread:1.0.1"
+    api "com.bihe0832.android:lib-thread:1.2.0"
 }
