--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:icon="@mipmap/icon"
         android:supportsRtl="true" >
         <activity
             android:name="com.bihe0832.android.test.MainActivity"
