--- a/LibUIUtils/src/main/AndroidManifest.xml
+++ b/LibUIUtils/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.tencent.mna.lib.ui">
+    package="com.bihe0832.android.lib.ui">
 
 </manifest>
