--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -46,9 +46,12 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
+    kapt "com.bihe0832.android:lib-router-compiler:1.2.1"
+
+
 //    api project(':LibUtils')
 //    api project(':LibUIUtils')
 //    api project(':LibTTS')
-    api "com.bihe0832.android:lib-utils:1.2.8"
+    api "com.bihe0832.android:lib-utils:1.2.9"
     api "com.bihe0832.android:lib-uiutils:1.2.3"
 }
