--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name="com.bihe0832.android.test.TestTTSActivity"
+            android:name="com.tencent.mocmna.app.test.TestTTSActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="sensor">
 
