--- a/settings.gradle
+++ b/settings.gradle
@@ -15,8 +15,8 @@
 //include 'LibToast'
 //include 'LibAPK'
 //
-//
-include 'LibUIUtils'
+
+//include 'LibUIUtils'
 include 'LibUtils'
-include ':APPTest'
+//include ':APPTest'
 
