--- a/settings.gradle
+++ b/settings.gradle
@@ -1,22 +1,24 @@
 //备注：这里的Lib严格按照先后依赖顺序排序，方便快速查看依赖
-//include 'RouterAnnotation'
-//include 'Router'
-//include 'RouterCompiler'
-//include ':LibCommonUtils'
-//include 'LibThread'
-//include 'LibEncrypt'
-//include 'LibGson'
-//include 'LibChannel'
-//include 'LibTimer'
-//include 'LibConfig'
-//include 'LibFile'
-//include 'LibDownloadAndInstall'
-//include 'LibTTS'
-//include 'LibToast'
-//include 'LibAPK'
-//
+//include ':RouterAnnotation'
+//include ':Router'
+//include ':RouterCompiler'
+//include '::LibCommonUtils'
+//include ':LibThread'
+//include ':LibEncrypt'
+//include ':LibGson'
+//include ':LibChannel'
+//include ':LibTimer'
+//include ':LibConfig'
+//include ':LibFile'
+//include ':LibDownloadAndInstall'
+//include ':LibTTS'
+//include ':LibToast'
+//include ':LibAPK'
+include ':LibAdapter'
 
-//include 'LibUIUtils'
-include 'LibUtils'
-//include ':APPTest'
+//include ':LibUIUtils'
+//include ':LibUtils'
+//include '::APPTest'
+
+
 
