--- a/LibFragmentation_core/build.gradle
+++ b/LibFragmentation_core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'maven'//maven插件，用于上传插件到仓库
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -18,7 +18,6 @@ android {
             minifyEnabled false
         }
     }
-
     lintOptions {
         abortOnError false
     }
@@ -26,16 +25,16 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-adapter'//项目名称
+    artifactId = 'lib-fragmentation-core'//项目名称
     repoName = rootProject.repoName
     publishVersion = '1.0.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the adapter of list  for zixie'//项目描述
+    desc = 'the fragmentation core for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
 
 dependencies {
-    api "com.android.support:recyclerview-v7:${project.android_support_version}"
+    api "com.android.support:appcompat-v7:${project.android_support_version}"
 }
