--- a/LibUtils/build.gradle
+++ b/LibUtils/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     api 'com.bihe0832.android:lib-tts:1.2.1'
     api 'com.bihe0832.android:lib-adapter:1.0.0'
     api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.0'
+    api 'com.bihe0832.android:lib-flycotablayout:1.0.0'
+
 }
