--- a/LibAndroid/build.gradle
+++ b/LibAndroid/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'//maven插件，用于上传插件到仓库
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
@@ -18,24 +20,18 @@ android {
             minifyEnabled false
         }
     }
-
     lintOptions {
         abortOnError false
     }
 }
 
 publish {
-    artifactId = 'lib-qrcode'//项目名称
+    artifactId = 'lib-android'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.0.1'//版本号
+    publishVersion = '1.0.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the qrcode for zixie'//项目描述
+    desc = 'the android source for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
-}
-
-dependencies {
-    api 'com.google.zxing:core:3.3.0'
-    api "com.android.support:appcompat-v7:$project.android_support_version"
 }
