--- a/LibFragmentation_swipeback/src/main/AndroidManifest.xml
+++ b/LibFragmentation_swipeback/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest package="me.yokeyword.fragmentation_swipeback"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="me.yokeyword.fragmentation_swipeback">
 
     <application/>
 
