--- a/LibQRCode/src/main/AndroidManifest.xml
+++ b/LibQRCode/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tencent.mna.lib.qrcode">
+          package="com.bihe0832.lib.android.qrcode">
     <uses-permission android:name="android.permission.VIBRATE"/> <!-- 震动权限 -->
     <uses-permission android:name="android.permission.CAMERA"/> <!-- 摄像头权限 -->
     <uses-feature android:name="android.hardware.camera.autofocus"/> <!-- 自动聚焦权限 -->
