--- a/settings.gradle
+++ b/settings.gradle
@@ -24,8 +24,8 @@
 //include ':LibRefresh'
 
 //include ':LibUIUtils'
-//include ':LibUtils'
-include '::APPTest'
+include ':LibUtils'
+//include '::APPTest'
 
 
 
