--- a/LibFile/src/main/AndroidManifest.xml
+++ b/LibFile/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.bihe0832.android.lib.file"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
     <application>
         <provider
@@ -12,7 +10,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/zixie_file_paths"/>
+                android:resource="@xml/file_paths"/>
         </provider>
     </application>
 </manifest>
