--- a/LibUtils/build.gradle
+++ b/LibUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-utils'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.3.4'//版本号
+    publishVersion = '1.3.5'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -46,9 +46,11 @@ dependencies {
     api 'com.bihe0832.android:lib-encrypt:1.2.0'
     api 'com.bihe0832.android:lib-gson:1.2.0'
     api 'com.bihe0832.android:lib-channel:1.2.1'
-    api "com.bihe0832.android:lib-timer:1.2.3"
+    api "com.bihe0832.android:lib-timer:1.2.4"
     api 'com.bihe0832.android:lib-config:1.2.0'
-    api 'com.bihe0832.android:lib-download-install:1.2.2'
+    api 'com.bihe0832.android:lib-request:1.0.2'
+
+    api 'com.bihe0832.android:lib-download-install:1.2.4'
     api 'com.bihe0832.android:lib-utils-apk:1.2.2'
     api 'com.bihe0832.android:lib-tts:1.3.1'
     api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.1'
