--- a/LibNotification/build.gradle
+++ b/LibNotification/build.gradle
@@ -27,13 +27,13 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-sqlite'//项目名称
+    artifactId = 'lib-notification'//项目名称
     repoName=rootProject.repoName
-    publishVersion = '1.0.0'//版本号
+    publishVersion = '1.0.3'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the base sqlite helper for zixie'//项目描述
+    desc = 'the base notification helper for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory.git'//项目对应网站
 }
 
@@ -42,6 +42,7 @@ dependencies {
     api "com.android.support:support-v4:${project.android_support_version}"
     api "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}"
 
+    api "com.bihe0832.android:lib-utils-common:1.2.1"
     api 'com.bihe0832.android:lib-utils-apk:1.2.2'
 
 }
