--- a/LibUtils/build.gradle
+++ b/LibUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-utils'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.3.5'//版本号
+    publishVersion = '1.5.2'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -41,22 +41,22 @@ dependencies {
     api 'com.bihe0832.android:lib-router:1.2.4'
     api 'com.bihe0832.android:lib-router-annotation:1.2.1'
     api 'com.bihe0832.android:lib-android:1.0.0'
-    api 'com.bihe0832.android:lib-utils-common:1.2.0'
+    api 'com.bihe0832.android:lib-utils-common:1.2.1'
     api 'com.bihe0832.android:lib-thread:1.2.0'
     api 'com.bihe0832.android:lib-encrypt:1.2.0'
-    api 'com.bihe0832.android:lib-gson:1.2.0'
+    api 'com.bihe0832.android:lib-gson:1.2.1'
     api 'com.bihe0832.android:lib-channel:1.2.1'
-    api "com.bihe0832.android:lib-timer:1.2.4"
-    api 'com.bihe0832.android:lib-config:1.2.0'
+    api "com.bihe0832.android:lib-timer:1.2.5"
+    api 'com.bihe0832.android:lib-config:1.2.1'
     api 'com.bihe0832.android:lib-request:1.0.2'
+    api 'com.bihe0832.android:lib-sqlite:1.0.0'
+    api 'com.bihe0832.android:lib-notification:1.0.3'
 
     api 'com.bihe0832.android:lib-download-install:1.2.4'
-    api 'com.bihe0832.android:lib-utils-apk:1.2.2'
-    api 'com.bihe0832.android:lib-tts:1.3.1'
+    api 'com.bihe0832.android:lib-tts:1.3.2'
     api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.1'
     api 'com.bihe0832.android:lib-flycotablayout:1.0.0'
     api 'com.bihe0832.android:lib-qrcode:1.0.1'
     api 'com.bihe0832.android:lib-refresh:1.0.0'
-
-//    api project(":LibTTS")
+//    api project(":LibNotification")
 }
