新增dialog、image、commonui

--- a/LibAPK/build.gradle
+++ b/LibAPK/build.gradle
@@ -29,11 +29,11 @@ android {
 publish {
     artifactId = 'lib-utils-apk'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.2.2'//版本号
+    publishVersion = '1.2.3'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the apk utils for zixie'//项目描述
+    desc = 'the apk and intent utils for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
 
