--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -45,16 +45,14 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:support-v4:${project.android_support_version}"
-    api "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}"
-    api "com.android.support:appcompat-v7:${project.android_support_version}"
-
+//    implementation "com.android.support:support-v4:${project.android_support_version}"
+//    api "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}"
+//    api "com.android.support:appcompat-v7:${project.android_support_version}"
     kapt "com.bihe0832.android:lib-router-compiler:1.2.1"
 
-
-    api project(':LibUtils')
+//    api project(':LibUtils')
 //    api project(':LibUIUtils')
 //    api project(':LibTTS')
-//    api "com.bihe0832.android:lib-utils:1.3.4"
-    api "com.bihe0832.android:lib-uiutils:1.2.3"
+    api "com.bihe0832.android:lib-utils:1.5.3"
+    api "com.bihe0832.android:lib-uiutils:1.3.2"
 }
