--- a/LibCommonUIUtils/build.gradle
+++ b/LibCommonUIUtils/build.gradle
@@ -25,23 +25,18 @@ android {
     }
 }
 
-
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-uiutils'//项目名称
+    artifactId = 'lib-ui-common'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.3.2'//版本号
+    publishVersion = '1.0.1'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the ui utils for zixie'//项目描述
-    website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
+    desc = 'the common ui utils for zixie'//项目描述
+    website = 'https://github.com/bihe0832/AndroidAppFactory.git'//项目对应网站
 }
 
 dependencies {
-    api 'com.bihe0832.android:lib-toast:1.3.1'
-    api "com.bihe0832.android:lib-ui-common:1.0.1"
-    api "com.bihe0832.android:lib-image:1.0.0"
-    api "com.bihe0832.android:lib-dialog:1.0.1"
-//    api project(":LibDialog")
+    api "com.android.support:support-annotations:$project.android_support_version"
 }
