--- a/LibUtils/build.gradle
+++ b/LibUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-utils'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.5.2'//版本号
+    publishVersion = '1.5.3'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -50,7 +50,7 @@ dependencies {
     api 'com.bihe0832.android:lib-config:1.2.1'
     api 'com.bihe0832.android:lib-request:1.0.2'
     api 'com.bihe0832.android:lib-sqlite:1.0.0'
-    api 'com.bihe0832.android:lib-notification:1.0.3'
+    api 'com.bihe0832.android:lib-notification:1.0.4'
 
     api 'com.bihe0832.android:lib-download-install:1.2.4'
     api 'com.bihe0832.android:lib-tts:1.3.2'
@@ -59,4 +59,5 @@ dependencies {
     api 'com.bihe0832.android:lib-qrcode:1.0.1'
     api 'com.bihe0832.android:lib-refresh:1.0.0'
 //    api project(":LibNotification")
+//    api project(':LibAPK')
 }
