--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -50,9 +50,9 @@ dependencies {
 //    api "com.android.support:appcompat-v7:${project.android_support_version}"
     kapt "com.bihe0832.android:lib-router-compiler:1.2.1"
 
-//    api project(':LibUtils')
-//    api project(':LibUIUtils')
+    api project(':LibUtils')
+    api project(':LibUIUtils')
 //    api project(':LibTTS')
-    api "com.bihe0832.android:lib-utils:1.5.3"
-    api "com.bihe0832.android:lib-uiutils:1.3.4"
+//    api "com.bihe0832.android:lib-utils:1.5.3"
+//    api "com.bihe0832.android:lib-uiutils:1.3.4"
 }
