--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,10 @@ apply from: 'config.gradle'
 
 buildscript {
     repositories {
-        maven { url "https://mirrors.tencent.com/repository/maven/mna" }
-
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
         maven { url "https://dl.bintray.com/bihe0832/android" }
-
+        jcenter()
     }
 
     dependencies {
@@ -21,28 +19,28 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://mirrors.tencent.com/repository/maven/mna" }
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
         maven { url "https://dl.bintray.com/bihe0832/android" }
+        jcenter()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
-subprojects {
-    apply plugin: 'com.bihe0832.gradleDependenciesCheck'
-    GradleDependenciesCheckConfig {
-        showResultType = 1
-    }
-    afterEvaluate { Project project ->
-        project.getTasks().getByName('clean').doFirst {
-            delete "build"
-            delete ".externalNativeBuild"
-        }
-        project.getTasks().getByName('clean').dependsOn("checkGradleDependencies")
-//        project.getTasks().getByName('preBuild').dependsOn("checkGradleDependencies")
-    }
-}
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
+//
+//subprojects {
+//    apply plugin: 'com.bihe0832.gradleDependenciesCheck'
+//    GradleDependenciesCheckConfig {
+//        showResultType = 1
+//    }
+//    afterEvaluate { Project project ->
+//        project.getTasks().getByName('clean').doFirst {
+//            delete "build"
+//            delete ".externalNativeBuild"
+//        }
+//        project.getTasks().getByName('clean').dependsOn("checkGradleDependencies")
+////        project.getTasks().getByName('preBuild').dependsOn("checkGradleDependencies")
+//    }
+//}
