--- a/LibDownloadAndInstall/src/main/AndroidManifest.xml
+++ b/LibDownloadAndInstall/src/main/AndroidManifest.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.bihe0832.android.lib.download">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+<manifest package="com.bihe0832.android.lib.download">
 
 </manifest>
