--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@
 //include ':Router'
 //include ':RouterCompiler'
 //include ':LibAndroid'
-include ':LibCommonUtils'
+//include ':LibCommonUtils'
 
 //include ':LibFragmentation_core'
 //include ':LibFragmentation'
@@ -38,7 +38,7 @@ include ':LibCommonUtils'
 //include ':LibUtils'
 include ':LibWrapper'
 //
-//include '::APPTest'
+include '::APPTest'
 //
 
 
