--- a/settings.gradle
+++ b/settings.gradle
@@ -36,9 +36,8 @@
 //
 //include ':LibUIUtils'
 //include ':LibUtils'
-include ':LibWrapper'
-//
+//include ':LibWrapper'
+
 include '::APPTest'
-//
 
 
